2004-09-12 Seiichi SATO <ssato@sh.rim.or.jp>

	* configure.in: fixed typo.

2004-09-12 Seiichi SATO <ssato@sh.rim.or.jp>

	* etc/Makefile.in: removed uim.

2004-09-12 Seiichi SATO <ssato@sh.rim.or.jp>

	* configure.in: added output to show how you configured mlterm.

	* updated config.sub (timestamp='2004-06-24')
	* updated config.guess (timestamp='2004-08-13')

2004-09-11 Seiichi SATO <ssato@sh.rim.or.jp>

	* man/mlterm.1: fixed typo.

2004-09-11 Seiichi SATO <ssato@sh.rim.or.jp>

	* man/mlterm.1: fixed typo.

2004-09-11 Seiichi SATO <ssato@sh.rim.or.jp>

	* x_im.c, x_main_config.c, x_screen.c, tool/mlconfig/mc_im.c:
	allowed "input_method=none".

	* man/mlterm.1: updated. (--im=none)

2004-09-11 Seiichi SATO <ssato@sh.rim.or.jp>

	* tool/mlconfig/mc_im.c, tool/mlconfig/Makefile.in:
	- get available conversion engines from libuim directly.
	- added IIIMF support.

	* man/mlterm.1: added IIIMF related things into 'GUI CONFIGURATOR'
	section.

2004-09-11 Seiichi SATO <ssato@sh.rim.or.jp>

	* etc/uim: removed

2004-09-11 Seiichi SATO <ssato@sh.rim.or.jp>

	* man/mlterm.1:
	- removed xim_open_in_startup.
	- added input_method and --im.
	- 'GTK+ 1.2' -> 'GTK+ 1.2 or later'.
	- added 'Input Method' into 'GUI CONFIGURATOR' section.

2004-09-10 Seiichi SATO <ssato@sh.rim.or.jp>

	* README, doc/ja/README.ja:
	- removed xim_open_in_startup.
	- added input_method.
	- added --enable-dnd, --enable-uim and --enable-iiimf.
	- reformatted to fit in 80 columns.

	* LICENCE: updated. (Contents are not changed)

	* kiklib/configure.in:
	applied SuSE's patches(mlterm-configure.patch).

	* aclocal.m4:
	applied SuSE's patch(autoconf.patch).

2004-09-10 Seiichi SATO <ssato@sh.rim.or.jp>

	* x_im.h (x_im_t):
	- remove draw_preedit.
	- increased IM_API_VERSION.

	* inputmethod/uim/im_uim.c(drar_preedit),
	  inputmethod/iiimf/im_iiimf.c(drar_preedit): moved to ..
	* x_im.c (x_im_redraw_preedit): ..this

	* inputmethod/iiimf/im_iiimf.c: minor cleanups.

	* inputmethod/im_common.h: